full-demo/shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-mesh-full-demo
  labels:
    istio-discovery: enabled
    istio-injection: enabled
