full-demo/shared/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: full-demo
  namespace: canary-mesh-full-demo
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
